[gd_scene load_steps=4 format=3 uid="uid://cm5vkfw3p2x0u"]

[ext_resource type="Script" path="res://UI/Scripts/level_up_menu.gd" id="1_level"]
[ext_resource type="FontFile" uid="uid://2cet2eupuug3" path="res://assets/fonts/JetBrainsMonoNerdFont-Bold.ttf" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_menu"]
bg_color = Color(0.133333, 0.133333, 0.133333, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 12

[node name="LevelUpMenu" type="PanelContainer"]
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_menu")
script = ExtResource("1_level")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "LEVEL UP"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Level" type="HBoxContainer" parent="MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer/Level"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_font")
text = "Level"

[node name="LevelValue" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer/Level"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "1"

[node name="SoulsNeeded" type="HBoxContainer" parent="MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer/SoulsNeeded"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_font")
text = "Souls Needed"

[node name="SoulsNeededValue" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer/SoulsNeeded"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "500"

[node name="Points" type="HBoxContainer" parent="MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer/Points"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_font")
text = "Available Points"

[node name="PointsValue" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer/Points"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "0"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Stats" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Vigour" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Stats/Vigour"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_font")
text = "Vigour"

[node name="VigourValue" type="Label" parent="MarginContainer/VBoxContainer/Stats/Vigour"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "10"

[node name="VigourInc" type="Button" parent="MarginContainer/VBoxContainer/Stats/Vigour"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "+"

[node name="Endurance" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Stats/Endurance"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_font")
text = "Endurance"

[node name="EnduranceValue" type="Label" parent="MarginContainer/VBoxContainer/Stats/Endurance"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "10"

[node name="EnduranceInc" type="Button" parent="MarginContainer/VBoxContainer/Stats/Endurance"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "+"

[node name="Strength" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Stats/Strength"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_font")
text = "Strength"

[node name="StrengthValue" type="Label" parent="MarginContainer/VBoxContainer/Stats/Strength"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "10"

[node name="StrengthInc" type="Button" parent="MarginContainer/VBoxContainer/Stats/Strength"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "+"

[node name="Dexterity" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Stats/Dexterity"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_font")
text = "Dexterity"

[node name="DexterityValue" type="Label" parent="MarginContainer/VBoxContainer/Stats/Dexterity"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "10"

[node name="DexterityInc" type="Button" parent="MarginContainer/VBoxContainer/Stats/Dexterity"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "+"

[node name="Intelligence" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Stats/Intelligence"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_font")
text = "Intelligence"

[node name="IntelligenceValue" type="Label" parent="MarginContainer/VBoxContainer/Stats/Intelligence"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "10"

[node name="IntelligenceInc" type="Button" parent="MarginContainer/VBoxContainer/Stats/Intelligence"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "+"

[node name="Faith" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Stats/Faith"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_font")
text = "Faith"

[node name="FaithValue" type="Label" parent="MarginContainer/VBoxContainer/Stats/Faith"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "10"

[node name="FaithInc" type="Button" parent="MarginContainer/VBoxContainer/Stats/Faith"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "+"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="LevelUpButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "LEVEL UP"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
text = "CLOSE"
